--- a/index.html
+++ b/index.html
@@ -6,168 +6,158 @@
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Vuvalu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
-						<nav>
-							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/karlos-nup.png" class="image"><img src="img/karlos-nup.png" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/lopge-3.png" class="image"><img src="img/lopge-3.png" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/maik2.png" class="image"><img src="img/maik2.png" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/whither¿1.png" class="image"><img src="img/whither¿1.png" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer" class="panel">
-						<div class="inner split">
-							<div>
-								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
-								</section>
-								<section>
-									<h2>Follow me on ...</h2>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</section>
-								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
-							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-							</div>
-						</div>
-					</footer>
-
+		<div id="wrapper">
+			<header id="header">
+				<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+				<nav>
+					<ul>
+						<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+					</ul>
+				</nav>
+			</header>
+			<div id="main">
+				<article class="thumb">
+					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" /></a>
+					<h2>Magna feugiat lorem</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" /></a>
+					<h2>Nisl adipiscing</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" /></a>
+					<h2>Tempus aliquam veroeros</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/karlos-nup.png" class="image"><img src="img/karlos-nup.png" alt="" /></a>
+					<h2>Aliquam ipsum sed dolore</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" /></a>
+					<h2>Cursis aliquam nisl</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/lopge-3.png" class="image"><img src="img/lopge-3.png" alt="" /></a>
+					<h2>Sed consequat phasellus</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" /></a>
+					<h2>Mauris id tellus arcu</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/maik2.png" class="image"><img src="img/maik2.png" alt="" /></a>
+					<h2>Nunc vehicula id nulla</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" /></a>
+					<h2>Neque et faucibus viverra</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" /></a>
+					<h2>Mattis ante fermentum</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" /></a>
+					<h2>Sed ac elementum arcu</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" /></a>
+					<h2>Vehicula id nulla dignissim</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" /></a>
+					<h2>Vehicula id nulla dignissim</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" /></a>
+					<h2>Vehicula id nulla dignissim</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/whither¿1.png" class="image"><img src="img/whither¿1.png" alt="" /></a>
+					<h2>Vehicula id nulla dignissim</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
+				<article class="thumb">
+					<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" /></a>
+					<h2>Vehicula id nulla dignissim</h2>
+					<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				</article>
 			</div>
+			<footer id="footer" class="panel">
+				<div class="inner split">
+					<div>
+						<section>
+							<h2>Magna feugiat sed adipiscing</h2>
+							<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+						</section>
+						<section>
+							<h2>Follow me on ...</h2>
+							<ul class="icons">
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+						</section>
+						<p class="copyright">
+							&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+						</p>
+					</div>
+					<div>
+						<section>
+							<h2>Get in touch</h2>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field half">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="field half">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="field">
+										<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send" class="primary" /></li>
+									<li><input type="reset" value="Reset" /></li>
+								</ul>
+							</form>
+						</section>
+					</div>
+				</div>
+			</footer>
+		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
