header updated and favicon added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="https://img.icons8.com/dusk/20/000000/cotton-candy.png" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
 			<header id="header">
-				<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+				<h1><strong>Galería</strong> de Vuvalu</h1>
 				<nav>
 					<ul>
-						<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+						<li><a href="#footer" class="icon solid fa-info-circle">Info</a></li>
 					</ul>
 				</nav>
 			</header>
