Footer updated. Translated to spanish. Description added. Social media linked.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 -->
 <html>
 	<head>
-		<title>Vuvalu</title>
+		<title>｢ vuvalu ｣</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" href="https://img.icons8.com/dusk/20/000000/cotton-candy.png" type="image/x-icon">
+		<link rel="shortcut icon" href="https://cdnb.artstation.com/p/users/avatars/002/579/643/large/b938e2e53cca8b90e4c90bc364ff551f.jpg?1610731737" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
 			<header id="header">
-				<h1><strong>Galería</strong> de Vuvalu</h1>
+				<h1><strong>Galer&iacute;a</strong> de Vuvalu</h1>
 				<nav>
 					<ul>
 						<li><a href="#footer" class="icon solid fa-info-circle">Info</a></li>
@@ -93,42 +93,46 @@
 				<div class="inner split">
 					<div>
 						<section>
-							<h2>Magna feugiat sed adipiscing</h2>
-							<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+							<h2>Sobre m&iacute;</h2>
+							<br>
+								Concept Artist </br>
+								Buenos Aires, Argentina </br>
+								Colaborador en <a href="https://twitter.com/PermaDraw" target="_blank">@PermaDraw</a>
+							</p>
 						</section>
 						<section>
-							<h2>Follow me on ...</h2>
+							<h2>S&iacute;gueme en:</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/vuvasroom" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://www.instagram.com/vuvalu/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.artstation.com/vuvalu" class="icon brands fa-github"><span class="label">ArtStation</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
 							</ul>
 						</section>
 						<p class="copyright">
-							&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+							&copy; Francisco Santopietro. <a href="https://dracorfs.github.io/" target="_blank">Check my work!</a>.
 						</p>
 					</div>
 					<div>
 						<section>
-							<h2>Get in touch</h2>
+							<h2>Cont&aacute;ctame</h2>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Nombre" />
 									</div>
 									<div class="field half">
 										<input type="text" name="email" id="email" placeholder="Email" />
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+										<textarea name="message" id="message" rows="4" placeholder="Mensaje"></textarea>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send" class="primary" /></li>
-									<li><input type="reset" value="Reset" /></li>
+									<li><input type="submit" value="Mandar" class="primary" /></li>
+									<li><input type="reset" value="Borrar" /></li>
 								</ul>
 							</form>
 						</section>
