--- a/index.html
+++ b/index.html
@@ -25,67 +25,63 @@
 			</header>
 			<div id="main">
 				<article class="thumb">
-					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" /></a>
+					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" loading="lazy"/></a>
 					<!-- <p></p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" /></a>
+					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" loading="lazy"/></a>
 					<!-- <p></p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" /></a>
+					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" loading="lazy"/></a>
 					<!-- <p></p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/karlos-nup.png" class="image"><img src="img/karlos-nup.png" alt="" /></a>
+					<a href="img/karlos-nup.png" class="image"><img src="img/karlos-nup.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" /></a>
+					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/lopge-3.png" class="image"><img src="img/lopge-3.png" alt="" /></a>
+					<a href="img/lopge-3.png" class="image"><img src="img/lopge-3.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" /></a>
+					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/maik2.png" class="image"><img src="img/maik2.png" alt="" /></a>
+					<a href="img/maik2.png" class="image"><img src="img/maik2.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" /></a>
+					<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" /></a>
+					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" /></a>
+					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" /></a>
+					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" /></a>
+					<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" /></a>
+					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/whither¿1.png" class="image"><img src="img/whither¿1.png" alt="" /></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" /></a>
+					<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" loading="lazy"/></a>
 					<!-- <p>.</p> -->
 				</article>
 			</div>
