Images distribution changed and some deleted.

--- a/index.html
+++ b/index.html
@@ -25,64 +25,40 @@
 			</header>
 			<div id="main">
 				<article class="thumb">
-					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" loading="lazy"/></a>
-					<!-- <p></p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" loading="lazy"/></a>
-					<!-- <p></p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" loading="lazy"/></a>
-					<!-- <p></p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/karlos-nup.png" class="image"><img src="img/karlos-nup.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/lopge-3.png" class="image"><img src="img/lopge-3.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/maik2.png" class="image"><img src="img/maik2.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
 					<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
-				</article>
-				<article class="thumb">
-					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
+					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" loading="lazy"/></a>
 				</article>
 				<article class="thumb">
 					<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
 				</article>
 				<article class="thumb">
-					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
+					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" loading="lazy"/></a>
 				</article>
 				<article class="thumb">
 					<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" loading="lazy"/></a>
-					<!-- <p>.</p> -->
+				</article>
+				<article class="thumb">
+					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" loading="lazy"/></a>
+				</article>
+				<article class="thumb">
+					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
 				</article>
 			</div>
 			<footer id="footer" class="panel">
@@ -103,7 +79,7 @@
 								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								<li><a href="https://www.instagram.com/vuvalu/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.artstation.com/vuvalu" class="icon brands fa-github"><span class="label">ArtStation</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" class="icon brands fa-youtube"><span class="label">Dribbble</span></a></li>
 								<!-- <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
 							</ul>
 						</section>
