--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>｢ vuvalu ｣</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/index.css" />
 		<link rel="shortcut icon" href="https://cdnb.artstation.com/p/users/avatars/002/579/643/large/b938e2e53cca8b90e4c90bc364ff551f.jpg?1610731737" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -76,11 +76,9 @@
 							<h2>S&iacute;gueme en:</h2>
 							<ul class="icons">
 								<li><a href="https://twitter.com/vuvasroom" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								<li><a href="https://www.instagram.com/vuvalu/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.artstation.com/vuvalu" class="icon brands fa-github"><span class="label">ArtStation</span></a></li>
 								<li><a href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" class="icon brands fa-youtube"><span class="label">Dribbble</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
 							</ul>
 						</section>
 						<p class="copyright">
