--- a/index.html
+++ b/index.html
@@ -1,122 +1,80 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>｢ vuvalu ｣</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/index.css" />
+		<link rel="stylesheet" href="styles/css/index.min.css" />
 		<link rel="shortcut icon" href="https://cdnb.artstation.com/p/users/avatars/002/579/643/large/b938e2e53cca8b90e4c90bc364ff551f.jpg?1610731737" type="image/x-icon">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-		<div id="wrapper">
-			<header id="header">
-				<h1><strong>Galer&iacute;a</strong> de Vuvalu</h1>
-				<nav>
-					<ul>
-						<li><a href="#footer" class="icon solid fa-info-circle">Info</a></li>
-					</ul>
-				</nav>
-			</header>
-			<div id="main">
-				<article class="thumb">
-					<a href="img/nuevo-oc-pruevas.png" class="image"><img src="img/nuevo-oc-pruevas.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/ask-3.png" class="image"><img src="img/ask-3.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/valeria.png" class="image"><img src="img/valeria.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/richi-emese.png" class="image"><img src="img/richi-emese.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/premio-lusen.png" class="image"><img src="img/premio-lusen.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/whither¿hd.png" class="image"><img src="img/whither¿hd.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/lagartija-de-discord.png" class="image"><img src="img/lagartija-de-discord.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/blamo-de-milo.png" class="image"><img src="img/blamo-de-milo.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/vuvafurro.png" class="image"><img src="img/vuvafurro.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/jijiji.png" class="image"><img src="img/jijiji.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/maik1-hd.png" class="image"><img src="img/maik1-hd.png" alt="" loading="lazy"/></a>
-				</article>
-				<article class="thumb">
-					<a href="img/premio-ari.png" class="image"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
-				</article>
-			</div>
-			<footer id="footer" class="panel">
-				<div class="inner split">
-					<div>
-						<section>
-							<h2>Sobre m&iacute;</h2>
-							<br>
-								Concept Artist </br>
-								Buenos Aires, Argentina </br>
-								Colaborador en <a href="https://twitter.com/PermaDraw" target="_blank">@PermaDraw</a>
-							</p>
-						</section>
-						<section>
-							<h2>S&iacute;gueme en:</h2>
-							<ul class="icons">
-								<li><a href="https://twitter.com/vuvasroom" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.instagram.com/vuvalu/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.artstation.com/vuvalu" class="icon brands fa-github"><span class="label">ArtStation</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" class="icon brands fa-youtube"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">
-							&copy; Francisco Santopietro. <a href="https://dracorfs.github.io/" target="_blank">Check my work!</a>.
-						</p>
-					</div>
-					<div>
-						<section>
-							<h2>Cont&aacute;ctame</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Nombre" />
-									</div>
-									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" rows="4" placeholder="Mensaje"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Mandar" class="primary" /></li>
-									<li><input type="reset" value="Borrar" /></li>
-								</ul>
-							</form>
-						</section>
-					</div>
+	<body>
+		<header>
+			<h1><strong>Galer&iacute;a</strong> de Vuvalu</h1>
+			<nav>
+				<ul>
+					<li><a href="#footer">Info</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<article>
+				<a href="img/nuevo-oc-pruevas.png"><img src="img/nuevo-oc-pruevas.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/ask-3.png"><img src="img/ask-3.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/valeria.png"><img src="img/valeria.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/richi-emese.png"><img src="img/richi-emese.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/premio-lusen.png"><img src="img/premio-lusen.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/whither¿hd.png"><img src="img/whither¿hd.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/lagartija-de-discord.png"><img src="img/lagartija-de-discord.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/blamo-de-milo.png"><img src="img/blamo-de-milo.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/vuvafurro.png"><img src="img/vuvafurro.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/jijiji.png"><img src="img/jijiji.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/maik1-hd.png"><img src="img/maik1-hd.png" alt="" loading="lazy"/></a>
+			</article>
+			<article>
+				<a href="img/premio-ari.png"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
+			</article>
+		</main>
+		<footer id="footer">
+			<section>
+				<h2>Sobre m&iacute;</h2>
+				<br>
+					Concept Artist </br>
+					Buenos Aires, Argentina </br>
+					Colaborador en <a href="https://twitter.com/PermaDraw" target="_blank">@PermaDraw</a>
+				</p>
+			</section>
+			<section>
+				<h2>S&iacute;gueme en:</h2>
+				<div>
+					<a class="social-link twitter" href="https://twitter.com/vuvasroom" target="_blank"></a>
+					<a class="social-link instagram" href="https://www.instagram.com/vuvalu/" target="_blank"></a>
+					<a class="social-link vuvalu" href="https://www.artstation.com/vuvalu" target="_blank"></a>
+					<a class="social-link youtube" href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" target="_blank"></a>
 				</div>
-			</footer>
-		</div>
-
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+			</section>
+			<p class="copyright">
+				&copy; Francisco Santopietro. <a href="https://dracorfs.github.io/" target="_blank">Check my work!</a>.
+			</p>
+		</footer>
 	</body>
 </html>
