FIX: desktop sizes

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 				<div>
 					<a class="social-link twitter" href="https://twitter.com/vuvasroom" target="_blank"></a>
 					<a class="social-link instagram" href="https://www.instagram.com/vuvalu/" target="_blank"></a>
-					<a class="social-link vuvalu" href="https://www.artstation.com/vuvalu" target="_blank"></a>
+					<a class="social-link artstation" href="https://www.artstation.com/vuvalu" target="_blank"></a>
 					<a class="social-link youtube" href="https://www.youtube.com/channel/UCjDiBY4hk9HXuPPSj4N2kcg" target="_blank"></a>
 				</div>
 			</section>
 			<p class="copyright">
-				&copy; Francisco Santopietro. <a href="https://dracorfs.github.io/" target="_blank">Check my work!</a>.
+				&copy; Francisco Santopietro. <a href="https://dracorfs.dev/" target="_blank">Check my work!</a>.
 			</p>
 		</footer>
 	</body>
