--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<a href="img/premio-ari.png"><img src="img/premio-ari.png" alt="" loading="lazy"/></a>
 			</article>
 		</main>
-		<footer id="footer">
+		<footer id="footer" class="overlay">
 			<section>
 				<h2>Sobre m&iacute;</h2>
 				<br>
